Added HTML version of avg_quality notebook.

--- a/notebooks/avg_quality.ipynb
+++ b/notebooks/avg_quality.ipynb
@@ -244,6 +244,17 @@
     "plt.xlim([by_shaping.index.min(), max_mbps])\n",
     "_ = plt.ylim([0, 3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!ipython nbconvert measurements.ipynb --to html"
+   ]
   }
  ],
  "metadata": {
